objects/CRMC_PP__Recent_View__c.object
<CustomObject>
    <fields>
        <fullName>CRMC_PP__Conga_Grid_View__c</fullName>
        <label>Conga Grid View</label>
        <referenceTo>CRMC_PP__GridView__c</referenceTo>
        <relationshipLabel>Conga Grid Recent Views</relationshipLabel>
        <relationshipName>Conga_Grid_Recent_Views</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>CRMC_PP__Last_Viewed_Date__c</fullName>
        <label>Last Viewed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CRMC_PP__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Conga_Grid_Recent_Views</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Conga Grid Recent View</label>
    <nameField>
        <label>Conga Grid Recent View</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Conga Grid Recent Views</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>